@@ -318,6 +318,44 @@ public:
 	}
 	BOOL IsPathAllowed(LPCTSTR path)
 	{
+		// to avoid a deadlock, check if the exclude list is going to be rebuilt when ExcludeListValid is called
+		// if so, build a list of the shell paths here, BEFORE m_critSec is entered
+		std::vector<tstring> def_exvector, * pdef_exvector = 0;
+		if ((GetTickCount() - excludelistticker2)>DRIVETYPETIMEOUT)
+		{
+			int i=0;
+			TCHAR buf[MAX_PATH+2];	//MAX_PATH ok, since SHGetSpecialFolderPath doesn't return the required buffer length!
+			LPITEMIDLIST pidl = NULL;
+			int csidlarray[] = 
+			{
+				CSIDL_BITBUCKET,
+				CSIDL_CDBURN_AREA,
+				CSIDL_STARTMENU,
+				0
+			};
+			while (csidlarray[i])
+			{
+				++i;
+				pidl = NULL;
+				if (SHGetFolderLocation(NULL, csidlarray[i-1], NULL, 0, &pidl)!=S_OK)
+					continue;
+				if (!SHGetPathFromIDList(pidl, buf))
+				{
+					// not a file system path
+					CoTaskMemFree(pidl);
+					continue;
+				}
+				CoTaskMemFree(pidl);
+				if (_tcslen(buf)==0)
+					continue;
+				_tcscat_s(buf, MAX_PATH+2, _T("\\*"));
+				def_exvector.push_back(tstring(buf));
+			}
+
+			pdef_exvector = &def_exvector;
+		}
+
+
 		Locker lock(m_critSec);
 		IncludeListValid();
 		for (std::vector<tstring>::iterator I = invector.begin(); I != invector.end(); ++I)
@@ -339,7 +377,7 @@ public:
 				return TRUE;
 
 		}
-		ExcludeListValid();
+		ExcludeListValid(pdef_exvector); // optionally pass a pointer to the already built vector
 		for (std::vector<tstring>::iterator I = exvector.begin(); I != exvector.end(); ++I)
 		{
 			if (I->empty())
@@ -521,7 +559,7 @@ private:
 			excludecontextstr = (tstring)nocontextpaths;
 		}
 	}
-	void ExcludeListValid()
+	void ExcludeListValid(std::vector<tstring>* pdef_exvector)
 	{
 		if ((GetTickCount() - excludelistticker)>EXCLUDELISTTIMEOUT)
 		{
@@ -550,37 +588,15 @@ private:
 			}
 			excludeliststr = (tstring)excludelist;
 		}
-		if ((GetTickCount() - excludelistticker2)>DRIVETYPETIMEOUT)
+		if (pdef_exvector != 0)
 		{
 			Locker lock(m_critSec);
 			excludelistticker2 = GetTickCount();
-			int i=0;
-			TCHAR buf[MAX_PATH+2];	//MAX_PATH ok, since SHGetSpecialFolderPath doesn't return the required buffer length!
-			LPITEMIDLIST pidl = NULL;
-			int csidlarray[] = 
+
+			// copy from def_exvector which should already have been built for us
+			for (std::vector<tstring>::iterator I = pdef_exvector->begin(); I != pdef_exvector->end(); ++I)
 			{
-				CSIDL_BITBUCKET,
-				CSIDL_CDBURN_AREA,
-				CSIDL_STARTMENU,
-				0
-			};
-			while (csidlarray[i])
-			{
-				++i;
-				pidl = NULL;
-				if (SHGetFolderLocation(NULL, csidlarray[i-1], NULL, 0, &pidl)!=S_OK)
-					continue;
-				if (!SHGetPathFromIDList(pidl, buf))
-				{
-					// not a file system path
-					CoTaskMemFree(pidl);
-					continue;
-				}
-				CoTaskMemFree(pidl);
-				if (_tcslen(buf)==0)
-					continue;
-				_tcscat_s(buf, MAX_PATH+2, _T("\\*"));
-				exvector.push_back(tstring(buf));
+				exvector.push_back(*I);
 			}
 		}
 	}
